# snake

./: .gitignore  CMakeLists.txt  README.md  report.md
docs/: index.html  index.js  index.wasm  report.md
src/: Game.cpp  Game.h  Snake.cpp  Snake.h  main.cpp
web/: shell.html
